@@ -5,6 +5,6 @@ import java.util.stream.Collectors;
 
 public class AddStar {
     public List<String> addStar(List<String> strings) {
-        return strings.stream().map(n->n+"*").collect(Collectors.toList());
+        return strings.stream().map(n->n+"*").toList();
     }
 }
