@@ -4,6 +4,6 @@ import java.util.stream.Collectors;
 
 public class Doubling {
     public List<Integer> doubling(List<Integer> nums) {
-        return nums.stream().map(n-> n*2).collect(Collectors.toList());
+        return nums.stream().map(n-> n*2).toList();
     }
 }
