@@ -5,6 +5,6 @@ import java.util.stream.Collectors;
 
 public class Lower {
     public List<String> lower(List<String> strings) {
-        return strings.stream().map(String::toLowerCase).collect(Collectors.toList());
+        return strings.stream().map(String::toLowerCase).toList();
     }
 }
