@@ -5,6 +5,6 @@ import java.util.stream.Collectors;
 
 public class Math1 {
     public List<Integer> math1(List<Integer> nums) {
-        return nums.stream().map(n->(n+1)*10).collect(Collectors.toList());
+        return nums.stream().map(n->(n+1)*10).toList();
     }
 }
