@@ -5,6 +5,6 @@ import java.util.stream.Collectors;
 
 public class RightDigit {
     public List<Integer> rightDigit(List<Integer> nums) {
-        return nums.stream().map(n->n%10).collect(Collectors.toList());
+        return nums.stream().map(n->n%10).toList();
     }
 }
