@@ -4,6 +4,6 @@ import java.util.stream.Collectors;
 
 public class Square {
     public List<Integer> square(List<Integer> nums) {
-        return nums.stream().map(n->n *n).collect(Collectors.toList());
+        return nums.stream().map(n->n *n).toList();
     }
 }
